# rust-wasm-webgpu-starter

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
client/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
client/src/: App.module.css  App.tsx  index.css
client/src/components/: ControlPanel.module.css  ControlPanel.tsx  GpuCanvas.module.css  GpuCanvas.tsx
client/src/hooks/: useWasmEngine.ts
engine/: Cargo.toml
engine/src/: geometry.rs  lib.rs  math.rs  shader.wgsl  state.rs
server/: Cargo.toml
server/src/: main.rs
