[package]
name = "engine"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
console_error_panic_hook = "0.1"
bytemuck = { version = "1", features = ["derive"] }

[dependencies.web-sys]
version = "0.3"
features = [
  "HtmlCanvasElement",
  "Window",
  "Document",
  "Navigator",
  "OffscreenCanvas",
]

[dependencies.wgpu]
version = "29"
default-features = false
features = ["webgpu", "wgsl", "fragile-send-sync-non-atomic-wasm"]
